# oodaloompa

./: .gitignore  CLAUDE.md  DOGFOOD_SETUP.md  GMAIL_INTEGRATION.md  README.md  SLACK_INTEGRATION.md  gmail_setup.sh  milestone_1_prd.md  milestone_1_refinements.md  product_vision.md  slack-app-manifest.json  vision.md
efl-backend/: .env.example  Cargo.toml
efl-backend/migrations/: 001_initial_schema.sql
efl-backend/sqlite_migrations/: 0001_init.sql  0002_slack_map.sql  001_oauth_tokens.sql
efl-backend/src/: main.rs
efl-backend/src/connectors/: gmail.rs  mod.rs  slack.rs
efl-backend/src/db/: mod.rs
efl-backend/src/handlers/: card.rs  feed.rs  gmail.rs  health_db.rs  intent.rs  llm.rs  memory.rs  mod.rs  oauth.rs  slack.rs  slack_map.rs  stream.rs  telemetry.rs  trace.rs
efl-backend/src/llm/: json.rs  mod.rs
efl-backend/src/llm/prompts/: amplify_draft.md  intents.md  orient_ranking.md  transform_simplify.md
efl-backend/src/llm/providers/: dspy.rs  mock.rs  openai.rs
efl-backend/src/memory/: mod.rs
efl-backend/src/models/: altitude.rs  card.rs  intent.rs  memory.rs  mod.rs  trace.rs
efl-backend/src/services/: altimeter.rs  card.rs  feed.rs  gmail_cards.rs  intent.rs  memory.rs  mock_data.rs  mod.rs  parking.rs  telemetry.rs  trace.rs
efl-backend/src/sqlite/: db.rs  mod.rs  oauth.rs
efl-backend/src/sqlite/repo/: cards.rs  mod.rs  queue.rs  slack_map.rs  traces.rs  wakes.rs
efl-backend/src/sse/: mod.rs
efl-dspy/: .gitignore  README.md  main.py  requirements.txt  run.sh
efl-frontend/: .env.example  package-lock.json  package.json  (+1 more)
(+36 files in other folders)
