[package]
name = "efl_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json"] }

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Environment
dotenvy = "0.15"

# AI/LLM Integration
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
regex = "1"
urlencoding = "2.1"

# MCP Protocol Support
async-trait = "0.1"

# Memory/Caching
moka = { version = "0.12", features = ["future"] }

# Testing
mockall = "0.12"

[dev-dependencies]
axum-test = "14.0"
